<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/nickEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nickname"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/birthDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_select_birth_date"
            />

        <TextView
            android:id="@+id/birthDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginBottom="20dp"/>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_male"
                android:layout_marginBottom="20dp"/>

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_female"
                android:layout_marginBottom="20dp"/>

            <RadioButton
                android:id="@+id/radioPreferNotToSay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_prefer_not_to_say"
                android:layout_marginBottom="20dp"/>
        </RadioGroup>

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_height"
            android:inputType="numberDecimal"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_weight"
            android:inputType="numberDecimal"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/activityLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_activity_level"
            android:layout_marginBottom="20dp"/>

        <SeekBar
            android:id="@+id/activitySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_save_data" />

    </LinearLayout>
</ScrollView>
